<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.esy.silverwolf.gamecard6.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:id="@+id/intro"
        android:textSize="30dp"
        android:layout_below="@+id/showName"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bstart"
        android:id="@+id/BStart"
        android:layout_alignBaseline="@+id/BGallery"
        android:layout_alignBottom="@+id/BGallery"
        android:layout_alignStart="@+id/BCopyright" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BGallery"
        android:id="@+id/BGallery"
        android:layout_alignTop="@+id/BSetup"
        android:layout_toStartOf="@+id/BStart" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BSetup"
        android:id="@+id/BSetup"
        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/BStart" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BCopyright"
        android:id="@+id/BCopyright"
        android:layout_alignBaseline="@+id/BYoho"
        android:layout_alignBottom="@+id/BYoho"
        android:layout_centerHorizontal="true" />



    <ViewFlipper
        android:id="@+id/viewflipper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoStart="true"
        android:flipInterval="2000"
        android:layout_below="@id/intro"
        android:layout_above="@id/BStart">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/d" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/e" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/a" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/b" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/c" />
    </ViewFlipper>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/showName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="30dp"
        android:layout_alignEnd="@+id/BStart" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BYoho"
        android:id="@+id/BYoho"
        android:layout_below="@+id/BGallery"
        android:layout_alignParentStart="true" />

</RelativeLayout>

